--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -12,8 +12,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        name: Checkout my project
 
-      - name: Print folder
+      - name: Install Python 3.10 
+        uses: actions/setup-python@v4
+        with: 
+          python-version: "3.10"
+      - name: Install requirements
         run: |
-          ls
+          python -m pip install -r requirements.txt
     
