--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -18,7 +18,18 @@ jobs:
         uses: actions/setup-python@v4
         with: 
           python-version: "3.10"
+
       - name: Install requirements
         run: |
+          python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
+
+      - name: run pytest
+        run: |
+          python -m pytest
+
+      - name: Analysing the code with pylint
+        run: |
+          python -m pylint --fail-under=10 $(git ls-files '*.py')
+
     
